- Fix deadlock in PacketReader
- Fix bug causing torrent not to get stopped properly when an IO error occurs
- Stop or start trackers when they get disabled or enabled
- Fix CPU consumption bug in DHT NodeLookup and AnnounceTask
- Fix crashes caused by reference count error in piece handling (204227, 186621)
- Make sure powermanagement is inhibited when mediaplayer plugin plays a video

Changes in 3.3rc1:
- Make sure Qt's warnings, critical and fatal messages are printed to stderr in QtMessageOutput (203423)
- Fix crash by handling missing webinterface skins propperly (203430)
- Make TreeFilterModel use case insensitive filtering (203886)
- Draw progressbar in percentage column of view (190875)
- Make sure running torrents at exit are restarted when KT starts up when the QM is disabled (204988)
- Fix bug causing disabled trackers to be announced in a manual announce
- Add action to menu and toolbar to show or hide the GroupView
- Improved DHT's ability to find peers (205346)
- Make sure file locations are updated before torrent is restarted after data file move
- FileSelectDlg now displays if existing files are found
- Only do automatic update in webinterface of visible sections
- Make it possible to disable automatic update in webinterface
- Make playlist sortable in media player plugin
- Add URL drop support to view (208739)
- DHT packet receiving and parsing moved to separate thread (208801)
- Handle redirection in QHttp based announce job properly
- Make sure saving torrent in search plugin to existing file works
- Add home page for search plugin like the one in konqueror
- Clarify message when checking for files in completed downloads directory (208992)
- Use KUrl::toLocalFile instead of KUrl::path, path prepends / on windows, which breaks things
- Improve editing of feed name
- Fix crash in ChunkDownload (196417)
- Remove quit button from MissingFilesDlg (207388)
- Fix timeout handling of UDPTracker (211191)

Changes in 3.3beta1: