@@ -5,6 +5,8 @@ Changes in 3.3:
 - Fix CPU consumption bug in DHT NodeLookup and AnnounceTask
 - Fix crashes caused by reference count error in piece handling (204227, 186621)
 - Make sure powermanagement is inhibited when mediaplayer plugin plays a video
+- Fix crash caused by 0 pointer (jobuidelegate not set) (212580)
+- Fix deadlock caused by missing endl in JobQueue
 
 Changes in 3.3rc1:
 - Make sure Qt's warnings, critical and fatal messages are printed to stderr in QtMessageOutput (203423)
